Fix checkstyle issues (#1406)